force-app/main/default/objects/Pipeline__c/fields/Accepted_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Contract_Date__c</fullName>
    <description>Gives the Accepted Contract date which is populated from Entera</description>
    <formula>Prospect_Record__r.Accepted_Contract_Date__c</formula>
    <label>Accepted Contract Date</label>
    <type>Date</type>
</CustomField>