force-app/main/default/objects/Pipeline__c/fields/Accepted_Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Contract_Price__c</fullName>
    <description>Gives the accepted contract price at offer accepted level</description>
    <formula>Prospect_Record__r.Accepted_Contract_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accepted Contract Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>