force-app/main/default/objects/Pipeline__c/fields/Acq_Costs_Paid_at_Closing__c.field-meta.xml
<CustomField>
    <fullName>Acq_Costs_Paid_at_Closing__c</fullName>
    <description>Gives the acquisition costs paid at closing</description>
    <formula>HOA_Transfer_Fee__c  + Closing_Statement_Title_Policy_Expense__c + Closing_Statement_Title_Fee__c  + Closing_Statement_Title_Search_Fee__c + Closing_Statement_Other_Closing_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>HOA transfer Fees + Closing Statement Title Policy Expense + Closing Statement Title Fee + Closing Statement Title Search Fee + Closing Statement Other Closing Expenses</inlineHelpText>
    <label>Acq Costs Paid at Closing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>