force-app/main/default/objects/Pipeline__c/fields/Amended_Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>Amended_Contract_Price__c</fullName>
    <label>Amended Contract Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>