force-app/main/default/objects/Pipeline__c/fields/Amended_Escrow_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Amended_Escrow_Close_Date__c</fullName>
    <label>Amended Escrow Close Date</label>
    <type>Date</type>
</CustomField>