force-app/main/default/objects/Pipeline__c/fields/Annual_HOA_Dues__c.field-meta.xml
<CustomField>
    <fullName>Annual_HOA_Dues__c</fullName>
    <formula>CASE(Frequency_of_the_Assessment__c,&quot;Monthly&quot;, Assessment_Amount__c  * 12,&quot;Quarterly&quot;, Assessment_Amount__c  * 4,&quot;Semi-Annual&quot;, Assessment_Amount__c * 2,&quot;Annual&quot;, Assessment_Amount__c  * 1,null)</formula>
    <inlineHelpText>Calculated from Assessment Amount and Frequency of the Assessment</inlineHelpText>
    <label>Annual HOA Dues</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>