force-app/main/default/objects/Pipeline__c/fields/Annual_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Tax_Amount__c</fullName>
    <label>Annual Tax Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>