force-app/main/default/objects/Pipeline__c/fields/AP_Contact__c.field-meta.xml
<CustomField>
    <fullName>AP_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AP Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pipelines</relationshipName>
    <type>Lookup</type>
</CustomField>