force-app/main/default/objects/Pipeline__c/fields/Appraised_Value__c.field-meta.xml
<CustomField>
    <fullName>Appraised_Value__c</fullName>
    <formula>Prospect_Record__r.Market_Value_UW__c</formula>
    <label>Appraised Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>