force-app/main/default/objects/Pipeline__c/fields/Assessment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Amount__c</fullName>
    <description>HOA Assessment Amount</description>
    <label>Assessment Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>