force-app/main/default/objects/Pipeline__c/fields/Assessment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Due_Date__c</fullName>
    <description>HOA Assessment Due Date</description>
    <label>Assessment Due Date</label>
    <type>Date</type>
</CustomField>