force-app/main/default/objects/Pipeline__c/fields/Bid_Contingency_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Bid_Contingency_Percentage__c</fullName>
    <label>Bid Contingency (Percentage)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>