force-app/main/default/objects/Pipeline__c/fields/Bid_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Bid_Recommendation__c</fullName>
    <description>Gives the approved final Rehab estimate at UW</description>
    <label>Bid Recommendation</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>