force-app/main/default/objects/Pipeline__c/fields/Bid_Recommendation_Contingency__c.field-meta.xml
<CustomField>
    <fullName>Bid_Recommendation_Contingency__c</fullName>
    <formula>Bid_Recommendation__c *  Bid_Contingency_Percentage__c  + Bid_Recommendation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bid Recommendation + Contingency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>