force-app/main/default/objects/Pipeline__c/fields/Builder_Warranty_Received__c.field-meta.xml
<CustomField>
    <fullName>Builder_Warranty_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Builder Warranty Received</label>
    <type>Checkbox</type>
</CustomField>