force-app/main/default/objects/Pipeline__c/fields/Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reason__c</fullName>
    <label>Cancel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renovation Budget</fullName>
            </value>
            <value>
                <fullName>Rent Restricted</fullName>
            </value>
            <value>
                <fullName>Seller Cancel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>