force-app/main/default/objects/Pipeline__c/fields/CC_R_Information_Received__c.field-meta.xml
<CustomField>
    <fullName>CC_R_Information_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This Checkbox is for the Transaction Coordinator to notify the HOA Team when they receive the CC&amp;R Documentation</inlineHelpText>
    <label>CC&amp;R Information Received</label>
    <type>Checkbox</type>
</CustomField>