force-app/main/default/objects/Pipeline__c/fields/CC_R_Information_Verified__c.field-meta.xml
<CustomField>
    <fullName>CC_R_Information_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This Checkbox is for the Transaction Coordinator to notify the Construction Team that the HOA information has been Input on the Pipeline Record.</inlineHelpText>
    <label>CC&amp;R Information Verified</label>
    <type>Checkbox</type>
</CustomField>