force-app/main/default/objects/Pipeline__c/fields/CC_R_Verified_Comments__c.field-meta.xml
<CustomField>
    <fullName>CC_R_Verified_Comments__c</fullName>
    <label>CC&amp;R Verified Comments</label>
    <type>TextArea</type>
</CustomField>