force-app/main/default/objects/Pipeline__c/fields/CC_R_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_R_Verified_Date__c</fullName>
    <label>CC&amp;R Verified Date</label>
    <type>Date</type>
</CustomField>