force-app/main/default/objects/Pipeline__c/fields/Certificate_of_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Occupancy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate of Occupancy</label>
    <type>Checkbox</type>
</CustomField>