force-app/main/default/objects/Pipeline__c/fields/Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Date__c</fullName>
    <label>Option Wire/ Check Date</label>
    <type>Date</type>
</CustomField>