force-app/main/default/objects/Pipeline__c/fields/Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Number__c</fullName>
    <label>Option Reference/ Check No.</label>
    <length>25</length>
    <type>Text</type>
</CustomField>