force-app/main/default/objects/Pipeline__c/fields/Closing_Company_Same_as_Title__c.field-meta.xml
<CustomField>
    <fullName>Closing_Company_Same_as_Title__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if Closing Company is same as Title</description>
    <label>Closing Company Same as Title</label>
    <type>Checkbox</type>
</CustomField>