force-app/main/default/objects/Pipeline__c/fields/Closing_Credit_Agent__c.field-meta.xml
<CustomField>
    <fullName>Closing_Credit_Agent__c</fullName>
    <formula>Prospect_Record__r.Closing_Credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Credit Agent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>