force-app/main/default/objects/Pipeline__c/fields/Closing_Credit_Comments__c.field-meta.xml
<CustomField>
    <fullName>Closing_Credit_Comments__c</fullName>
    <inlineHelpText>To detail what type of credit has been entered into the “Closing Credit Other”</inlineHelpText>
    <label>Closing Credit Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>