force-app/main/default/objects/Pipeline__c/fields/Closing_Credit_Other__c.field-meta.xml
<CustomField>
    <fullName>Closing_Credit_Other__c</fullName>
    <inlineHelpText>To list any other type of credits on settlement statement such as seller credits, lease deposit credits, tax credits, etc</inlineHelpText>
    <label>Closing Credit Other</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>