force-app/main/default/objects/Pipeline__c/fields/Closing_Docs_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Docs_Approval_Date__c</fullName>
    <description>Gives the Closing docs approval date</description>
    <label>Closing Docs Approval Date</label>
    <type>Date</type>
</CustomField>