force-app/main/default/objects/Pipeline__c/fields/Closing_Docs_Received__c.field-meta.xml
<CustomField>
    <fullName>Closing_Docs_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if Closing docs received</description>
    <label>Closing Docs Received</label>
    <type>Checkbox</type>
</CustomField>