force-app/main/default/objects/Pipeline__c/fields/Closing_Docs_Signed__c.field-meta.xml
<CustomField>
    <fullName>Closing_Docs_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if Closing docs signed</description>
    <label>Closing Docs Signed</label>
    <type>Checkbox</type>
</CustomField>