force-app/main/default/objects/Pipeline__c/fields/Closing_Docs_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Docs_Signed_Date__c</fullName>
    <description>Gives the Closing docs signed date</description>
    <label>Closing Docs Signed Date</label>
    <type>Date</type>
</CustomField>