force-app/main/default/objects/Pipeline__c/fields/Closing_Funds_Due_from_Buyer_Old__c.field-meta.xml
<CustomField>
    <fullName>Closing_Funds_Due_from_Buyer_Old__c</fullName>
    <description>Gives the funds due from buyer at Closing</description>
    <label>Closing Funds Due from Buyer(Old)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>