force-app/main/default/objects/Pipeline__c/fields/Closing_Is_Notary_Required__c.field-meta.xml
<CustomField>
    <fullName>Closing_Is_Notary_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closing - Is Notary Required?</label>
    <type>Checkbox</type>
</CustomField>