force-app/main/default/objects/Pipeline__c/fields/Closing_Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Closing_Special_Instructions__c</fullName>
    <label>Closing Special Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>