force-app/main/default/objects/Pipeline__c/fields/Closing_Statement_Approved__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is checked by  REO accounting team to notify Heather that its approved to proceed forward to get the Closing docs to the Title Company</description>
    <inlineHelpText>Ownership of REO accounting team which when checked to true notifies Heather that its approved to proceed forward to get the Closing docs to the Title Company</inlineHelpText>
    <label>Closing Statement Approved</label>
    <type>Checkbox</type>
</CustomField>