force-app/main/default/objects/Pipeline__c/fields/Closing_Statement_Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Contract_Price__c</fullName>
    <description>Gives the Contract Price at Closing</description>
    <label>Closing Statement Contract Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>