force-app/main/default/objects/Pipeline__c/fields/Closing_Statement_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Deposit__c</fullName>
    <description>Gives the Closing Statement Deposit</description>
    <label>Closing Statement Deposit</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>