force-app/main/default/objects/Pipeline__c/fields/Closing_Statement_Funds_Due_from_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Funds_Due_from_Buyer__c</fullName>
    <formula>Closing_Statement_Contract_Price__c  -  (  Closing_Credit_Agent__c  +  Closing_Credit_Other__c  +  Closing_Statement_Deposit__c  +  Option_Fee_at_Closing__c  )  +  (  Other_Costs_Paid_at_Closing__c  +  Acq_Costs_Paid_at_Closing__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Closing Statement Contract Price - (Closing Credit Agent + Closing Credit Other + Closing Statement Deposit + Option fee at Closing) + (Other Costs Paid at Closing + ACQ Costs Paid at Closing)</inlineHelpText>
    <label>Closing Statement Funds Due from Buyer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>