force-app/main/default/objects/Pipeline__c/fields/Closing_Statement_HOA_Prepays__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_HOA_Prepays__c</fullName>
    <description>Gives the HOA prepays at Closing</description>
    <label>Closing Statement HOA Prepays</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>