force-app/main/default/objects/Pipeline__c/fields/Closing_Statement_Other_Closing_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Other_Closing_Expenses__c</fullName>
    <label>Closing Statement Other Closing Expenses</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>