force-app/main/default/objects/Pipeline__c/fields/Closing_Statement_Property_Tax_Prorates__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Property_Tax_Prorates__c</fullName>
    <description>Gives the Property Tax Prorates at Closing</description>
    <label>Closing Statement Property Tax Prorates</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>