force-app/main/default/objects/Pipeline__c/fields/Closing_Statement_Received__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ownership of Transaction Coordinator. A notification is sent to the REO Accounting team.</inlineHelpText>
    <label>Closing Statement Received</label>
    <type>Checkbox</type>
</CustomField>