force-app/main/default/objects/Pipeline__c/fields/Closing_Statement_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Received_Date__c</fullName>
    <label>Closing Statement Received Date</label>
    <type>Date</type>
</CustomField>