force-app/main/default/objects/Pipeline__c/fields/Closing_Statement_Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Settlement_Date__c</fullName>
    <description>Gives the Closing Settlement Date</description>
    <label>Closing Statement Settlement Date</label>
    <type>Date</type>
</CustomField>