force-app/main/default/objects/Pipeline__c/fields/Closing_Statement_Title_Fee__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Title_Fee__c</fullName>
    <label>Closing Statement Title Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>