force-app/main/default/objects/Pipeline__c/fields/Closing_Statement_Title_Policy_Expense__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Title_Policy_Expense__c</fullName>
    <description>Gives the Title Policy Expense at Closing</description>
    <label>Closing Statement Title Policy Expense</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>