force-app/main/default/objects/Pipeline__c/fields/Closing_Statement_Title_Search_Fee__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Title_Search_Fee__c</fullName>
    <description>To group the title search fee with title policy-related fees</description>
    <label>Closing Statement Title Search Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>