force-app/main/default/objects/Pipeline__c/fields/COE_Beneficiary_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>COE_Beneficiary_Reference_Number__c</fullName>
    <label>COE Beneficiary Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>