force-app/main/default/objects/Pipeline__c/fields/COE_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>COE_Due_Date__c</fullName>
    <description>Gives the COE due date</description>
    <label>COE Due Date</label>
    <type>Date</type>
</CustomField>