force-app/main/default/objects/Pipeline__c/fields/COE_Fed_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>COE_Fed_Reference_No__c</fullName>
    <label>COE Fed Reference No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>