force-app/main/default/objects/Pipeline__c/fields/COE_Funds_Amount__c.field-meta.xml
<CustomField>
    <fullName>COE_Funds_Amount__c</fullName>
    <description>Gives the COE funds amount</description>
    <label>COE Funds Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>