force-app/main/default/objects/Pipeline__c/fields/COE_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>COE_Requested_Date__c</fullName>
    <description>Gives the COE requested date</description>
    <label>COE Requested Date</label>
    <type>Date</type>
</CustomField>