force-app/main/default/objects/Pipeline__c/fields/COE_Wiring_Complete__c.field-meta.xml
<CustomField>
    <fullName>COE_Wiring_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COE Wiring Complete</label>
    <type>Checkbox</type>
</CustomField>