force-app/main/default/objects/Pipeline__c/fields/COE_Wiring_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>COE_Wiring_Complete_Date__c</fullName>
    <description>Gives the COE wiring complete date</description>
    <label>COE Wiring Complete Date</label>
    <type>Date</type>
</CustomField>