force-app/main/default/objects/Pipeline__c/fields/Contract_DisclosuresSpecial_Addendums__c.field-meta.xml
<CustomField>
    <fullName>Contract_DisclosuresSpecial_Addendums__c</fullName>
    <description>Gives the information on Contract Disclosures/Special Addendums</description>
    <label>Contract Disclosures/Special Addendums</label>
    <length>255</length>
    <type>Text</type>
</CustomField>