force-app/main/default/objects/Pipeline__c/fields/Contract_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contract_Notes__c</fullName>
    <description>Capture notes at the time of Contract</description>
    <label>Contract Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>