force-app/main/default/objects/Pipeline__c/fields/Current_Lease_Monthly_Rent__c.field-meta.xml
<CustomField>
    <fullName>Current_Lease_Monthly_Rent__c</fullName>
    <label>Current Lease Monthly Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>