force-app/main/default/objects/Pipeline__c/fields/Deposit_Held_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Held_Amount__c</fullName>
    <label>Deposit Held Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>