force-app/main/default/objects/Pipeline__c/fields/Deposit_Refund_Completed__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Refund_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposit Refund Completed</label>
    <type>Checkbox</type>
</CustomField>