force-app/main/default/objects/Pipeline__c/fields/Deposit_Refund_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Refund_Completed_Date__c</fullName>
    <label>Deposit Refund Completed Date</label>
    <type>Date</type>
</CustomField>