force-app/main/default/objects/Pipeline__c/fields/Deposit_Refund_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Refund_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This Checkbox is for the Transaction Coordinator to check and notify Accounts Payable, REO Accounting/ Treasury to imitate check or wire.</inlineHelpText>
    <label>Deposit Refund Initiated</label>
    <type>Checkbox</type>
</CustomField>