force-app/main/default/objects/Pipeline__c/fields/Deposit_Refund_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Refund_Instructions__c</fullName>
    <label>Deposit Refund Instructions</label>
    <type>TextArea</type>
</CustomField>