force-app/main/default/objects/Pipeline__c/fields/Deposit_Refund_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Refund_Payment_Type__c</fullName>
    <label>Deposit Refund Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Wire w/EMD</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Certified Funds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>