force-app/main/default/objects/Pipeline__c/fields/Deposit_Refund_Reference_Check_No__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Refund_Reference_Check_No__c</fullName>
    <label>Deposit Refund Reference/Check No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>