force-app/main/default/objects/Pipeline__c/fields/Deposit_Rent_Payment_Source__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Rent_Payment_Source__c</fullName>
    <label>Deposit/Rent Payment Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>