force-app/main/default/objects/Pipeline__c/fields/doCreateNF__c.field-meta.xml
<CustomField>
    <fullName>doCreateNF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>doCreateNF</label>
    <type>Checkbox</type>
</CustomField>