force-app/main/default/objects/Pipeline__c/fields/doCreateProperty__c.field-meta.xml
<CustomField>
    <fullName>doCreateProperty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>doCreateProperty</label>
    <type>Checkbox</type>
</CustomField>