force-app/main/default/objects/Pipeline__c/fields/Due_Diligence_Comments__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Comments__c</fullName>
    <label>Due Diligence Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>