force-app/main/default/objects/Pipeline__c/fields/Due_Diligence_Period_Waived__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Period_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Due Diligence Period Waived</label>
    <type>Checkbox</type>
</CustomField>