force-app/main/default/objects/Pipeline__c/fields/Due_Diligence_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Start_Date__c</fullName>
    <label>Due Diligence Start Date</label>
    <type>Date</type>
</CustomField>