force-app/main/default/objects/Pipeline__c/fields/EMD_Beneficiary_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>EMD_Beneficiary_Reference_No__c</fullName>
    <label>EMD Beneficiary Reference No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>