force-app/main/default/objects/Pipeline__c/fields/EMD_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>EMD_Check_Date__c</fullName>
    <label>EMD Check Date</label>
    <type>Date</type>
</CustomField>