force-app/main/default/objects/Pipeline__c/fields/EMD_Check_Number__c.field-meta.xml
<CustomField>
    <fullName>EMD_Check_Number__c</fullName>
    <label>EMD Check Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>