force-app/main/default/objects/Pipeline__c/fields/EMD_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>EMD_Due_Date__c</fullName>
    <description>Gives the EMD due date</description>
    <label>EMD Due Date</label>
    <type>Date</type>
</CustomField>