force-app/main/default/objects/Pipeline__c/fields/EMD_Fed_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>EMD_Fed_Reference_No__c</fullName>
    <description>Gives the Fed reference number</description>
    <label>EMD Reference/ Check No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>