force-app/main/default/objects/Pipeline__c/fields/EMD_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>EMD_Refund_Amount__c</fullName>
    <description>This field would only be filled if the deal is canceled and the EMD Amount needs to be refunded.</description>
    <inlineHelpText>Input field for the EMD Refund amount.</inlineHelpText>
    <label>EMD Refund Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>