force-app/main/default/objects/Pipeline__c/fields/EMD_Refund_Received__c.field-meta.xml
<CustomField>
    <fullName>EMD_Refund_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox to indicate if the EMD Refund Amount is received</description>
    <inlineHelpText>Check to &quot;True&quot; if the EMD Refund Amount is received.</inlineHelpText>
    <label>EMD Refund Received</label>
    <type>Checkbox</type>
</CustomField>