force-app/main/default/objects/Pipeline__c/fields/EMD_Refund_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>EMD_Refund_Received_Date__c</fullName>
    <description>Date on which the EMD Refund Amount was received.</description>
    <inlineHelpText>Input field for the EMD Refund Received Date.</inlineHelpText>
    <label>EMD Refund Received Date</label>
    <type>Date</type>
</CustomField>