force-app/main/default/objects/Pipeline__c/fields/EMD_Refund_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>EMD_Refund_Reference_No__c</fullName>
    <label>EMD Refund Reference No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>