force-app/main/default/objects/Pipeline__c/fields/EMD_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>EMD_Requested_Date__c</fullName>
    <description>Gives the EMD requested date</description>
    <label>EMD Requested Date</label>
    <type>Date</type>
</CustomField>