force-app/main/default/objects/Pipeline__c/fields/Escrow_Amount__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Amount__c</fullName>
    <formula>Prospect_Record__r.Escrow_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escrow Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>