force-app/main/default/objects/Pipeline__c/fields/Escrow_Company__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escrow Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Title Company</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pipelines (Escrow Company)</relationshipLabel>
    <relationshipName>Pipelines2</relationshipName>
    <type>Lookup</type>
</CustomField>